--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-flow": "^7.8.3"
+  }
 }
