--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
-    "@babel/preset-flow": "^7.8.3"
+    "@babel/preset-flow": "^7.8.3",
+    "jest": "^25.1.0"
   }
 }
